 - Kotlin is an alternate JVM language that is 100% interchangeable with Java
 - "Core" LazyLib is and always shall be written in Java, though some features
   such as the GUI classes are written in Kotlin, and Kotlin extension method
   bindings are provided in the org.lazywizard.lazylib.ext package
Added @Nullable annotations where appropriate
Added org.lazywizard.lazylib.ui.FontLoader:
 - load bitmap fonts with loadFont(String path)
Added org.lazywizard.lazylib.ui.LazyFont:
 - Represents a bitmap font (the same type Starsector itself uses)
 - Use drawText() for text that is updated every frame (not recommended!)
 - Use createText() to create a reusable DrawableString, which can draw a
   section of text repeatedly and very efficiently
 - See the Console mod for example usage; more examples will be provided soon
Removed from SimpleEntity:
 - Removed Object constructor (it used reflection, which is now blocked;
   remaining options are Vector2f, WeaponAPI, and ShipEngineAPI)

 2.2 (April 21, 2017)
=======================
Updated to be compatible with Starsector 0.8a
LazyLib Javadoc now links to LWJGL, Starsector, and JSON Javadocs
Changes to CampaignUtils:
 - Removed crew XP level argument from addShipToFleet()

 2.1b (March 16, 2017)
=======================
Switched version file hosting to Bitbucket

 2.1 (November 19, 2015)
=========================
Changes to AnchoredEntity:
 - getLocation() no longer returns a direct reference to the anchor's location
   when the anchored entity shares the same location
Changes to CampaignUtils:
 - Added addShipToFleet(String wingOrVariantId, FleetMemberType type,
   CrewXPLevel level, CampaignFleetAPI fleet)
 - Removed all getXOfType() methods, replaced with getXWithTag() (was filtering
   using class, now uses entity tags)
 - All methods that took a "Class entityClass" argument have had said argument
   replaced with "String tag"
 - getNearbyFleets(), getNearbyHostileFleets(), get NearestHostileFleet(),