@@ -1,0 +1,4 @@
+/**
+ * Contains classes and methods for rendering text and simple GUI elements.
+ */
+package org.lazywizard.lazylib.ui;
